fix crashing bug in securities view.

--- a/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
+++ b/Source/WPF/MyMoney/View Selectors/SecuritiesControl.xaml
@@ -39,8 +39,7 @@
                 <TextBlock Text="{Binding Symbol}" 
                            Grid.Column="1"
                            TextTrimming="CharacterEllipsis" 
-                           ClipToBounds="True"
-                           FontWeight="{Binding Flags, Converter={StaticResource PayeeFontWeightConverter}}"/>
+                           ClipToBounds="True"/>
             </Grid>
         </DataTemplate>
     </UserControl.Resources>
