--- a/Source/WPF/MyMoney/MainWindow.xaml
+++ b/Source/WPF/MyMoney/MainWindow.xaml
@@ -81,8 +81,8 @@
         <CommandBinding Command="p:AppCommands.CommandOnlineSyncAccount" Executed="OnSynchronizeOnlineAccounts" CanExecute="CanSynchronizeOnlineAccounts"/>
         <CommandBinding Command="p:AppCommands.CommandOnlineUpdateSecurities" Executed="OnCommandUpdateSecurities" CanExecute="CanUpdateSecurities"/>
         <CommandBinding Command="p:AppCommands.CommandDownloadAccounts" Executed="OnCommandDownloadAccounts" />
-        <!--<CommandBinding Command="p:AppCommands.CommandStockQuoteAccountCreds" Executed="OnCommandStockQuoteAccountCreds" />-->
-        
+        <CommandBinding Command="p:AppCommands.CommandStockQuoteServiceOptions" Executed="OnStockQuoteServiceOptions" />
+
         <!-- Navigation -->
         <CommandBinding Command="p:AppCommands.CommandBack" Executed="OnCommandBackExecute" CanExecute="OnCommandBackCanExecute"/>
         <CommandBinding Command="p:AppCommands.CommandForward" Executed="CommandBinding_Executed" CanExecute="CommandBinding_CanExecute"/>
@@ -215,7 +215,7 @@
                         <MenuItem x:Name="MenuOnlineSyncAccount" Header="_Synchronize Account" Command="p:AppCommands.CommandOnlineSyncAccount"/>
                         <MenuItem x:Name="MenuOnlineUpdateSecurities" Header="_Update Securities" Command="p:AppCommands.CommandOnlineUpdateSecurities"/>
                         <MenuItem x:Name="MenuOnlineDownloadAccounts" Header="_Download Accounts..." Command="p:AppCommands.CommandDownloadAccounts"/>
-                        <!--<MenuItem x:Name="MenuStockQuoteAccountCreds" Header="_Intrinio Password..." Command="p:AppCommands.CommandStockQuoteAccountCreds"/>-->
+                        <MenuItem x:Name="MenuStockQuoteServiceOptions" Header="Stock Quote Account..." Command="p:AppCommands.CommandStockQuoteServiceOptions"/>
                     </MenuItem>
 
                     <MenuItem x:Name="MenuHelp" Header="_Help">
