--- a/Source/WPF/MyMoney/Dialogs/StockQuoteServiceDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/StockQuoteServiceDialog.xaml
@@ -20,6 +20,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="20"/>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
@@ -35,7 +37,10 @@
             <TextBlock Text="Limit on Requests Per Day:" Grid.Row="6" Grid.Column="0" Margin="5"/>
             <TextBox x:Name="TextBoxRequestsPerDayLimit" Grid.Row="6" Grid.Column="1" MinWidth="200" Text="{Binding Path=ApiRequestsPerDayLimit, Mode=TwoWay}"/>
 
-            <StackPanel Orientation="Horizontal" Grid.Row="8" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,0,0">
+            <TextBlock Text="Limit on Requests Per Month:" Grid.Row="8" Grid.Column="0" Margin="5"/>
+            <TextBox x:Name="TextBoxRequestsPerMonthLimit" Grid.Row="8" Grid.Column="1" MinWidth="200" Text="{Binding Path=ApiRequestsPerMonthLimit, Mode=TwoWay}"/>
+
+            <StackPanel Orientation="Horizontal" Grid.Row="10" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,0,0">
                 <Button x:Name="ButtonOk" MinWidth="73" MinHeight="24" Margin="5" IsDefault="True" Click="OnOk">OK</Button>
                 <Button x:Name="ButtonCancel" MinWidth="73" MinHeight="24" Margin="5" IsCancel="True" Click="OnCancel">Cancel</Button>
             </StackPanel>
