Further optimize startup performance by delaying the use of stock quote history until the user does a "View by security" request.  Optimize when stock quote history is downloaded, namely, only when there are holes in the history that need filling. Add a "stock" tab with chart showing stock history (when in "View by security" mode).

--- a/Source/WPF/MyMoney/MainWindow.xaml
+++ b/Source/WPF/MyMoney/MainWindow.xaml
@@ -166,7 +166,6 @@
                             <MenuItem x:Name="MenuFixSplits" Header="Fix _Splits" Click="MenuFixSplits_Click"/>
                             <MenuItem x:Name="MenuFixSecurities" Header="Remove _Duplicate Securities" Click="MenuRemoveDuplicateSecurities_Click"/>
                             <MenuItem x:Name="MenuFixPayees" Header="Remove _Duplicate Payees" Click="MenuRemoveDuplicatePayees_Click"/>
-                            <MenuItem x:Name="MenuRecomputeBudgetBalance" Header="Recompute _Budget Balance" Click="MenuRecomputeBudgetBalance_Click"/>
                         </MenuItem>
                     </MenuItem>
 
@@ -347,10 +346,11 @@
                             <cc:CategoryChart x:Name="PieChartExpenses" CategoryType="Expense"/>
                         </TabItem>
 
-                        <TabItem x:Name="TabBudget" Header="Budget">
-                            <cc:BudgetChart x:Name="BudgetChart" />
+                        <TabItem x:Name="TabStock" Header="Stock">
+                            <vc:TrendGraph x:Name="StockGraph"  ShowBalance="False"
+                            />
                         </TabItem>
-
+                        
                         <TabItem x:Name="TabLoan" Header="Payments">
                             <cc:LoanChart x:Name="LoanChart" />
                         </TabItem>
