Pin bar chart minimum value to zero, for charts that do not contain negative columns.

--- a/Source/WPF/MyMoney/Charts/HistoryBarChart.xaml
+++ b/Source/WPF/MyMoney/Charts/HistoryBarChart.xaml
@@ -71,7 +71,7 @@
 
             </charting:LineSeries>
             <charting:Chart.Axes>
-                <charting:LinearAxis Orientation="Y"  />
+                <charting:LinearAxis x:Name="BarChartAxis" Orientation="Y" />
             </charting:Chart.Axes>
         </charting:Chart>
 
