Add ability to drag/drop a .png, .jpg, .gif or .bmp image of a receipt onto a Transaction to add it as an attachment. Thanks to github community member 'tobin5' for this handy contribution.

--- a/Source/WPF/MyMoney/Themes/generic.xaml
+++ b/Source/WPF/MyMoney/Themes/generic.xaml
@@ -72,12 +72,8 @@
         <GradientStop Color="#AEB9CD" Offset="1" />
     </LinearGradientBrush>
 
-    <Style TargetType="DataGridRow" x:Key="DragDropRowFeedback">
-        <Setter Property="BorderBrush" Value="Navy"/>
-        <Setter Property="BorderThickness" Value="2"/>
-    </Style>
-
-
+    <SolidColorBrush x:Key="ValidDropTargetFeedbackBrush" Color="Navy"/>
+    
     <Style x:Key="SmoothFadeIn" TargetType="FrameworkElement" >
         <Style.Triggers>
             <Trigger Property="Visibility" Value="Visible">
