Allow paste image on selected transaction to add an attachment, so no need to open attachment dialog.

--- a/Source/WPF/MyMoney/Views/TransactionsView.xaml
+++ b/Source/WPF/MyMoney/Views/TransactionsView.xaml
@@ -821,7 +821,7 @@
         <GridSplitter x:Name="QueryPanelSplitter" Grid.Row="1" HorizontalAlignment="Stretch"  ResizeBehavior="PreviousAndNext" Visibility="Collapsed" ShowsPreview="false"/>
 
         <!-- TRANSACTIONS -->
-        <Grid Grid.Row="2">
+        <Grid x:Name="TransactionsGrid" Grid.Row="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
