add a "Open Location" in the settings page

--- a/Source/Xamarin/project/Shared/Views/PageSettings.xaml
+++ b/Source/Xamarin/project/Shared/Views/PageSettings.xaml
@@ -19,7 +19,8 @@
             <StackLayout Orientation="Vertical">
                 <StackLayout Orientation="Horizontal">
                     <Label Text="Money File" Margin="0,0,40,0" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand"/>
-                    <Button x:Name="AddSourceFolder" Text="Change" HorizontalOptions="EndAndExpand"/>
+                    <Button x:Name="OpenFileLocation" Text="Open Location" HorizontalOptions="EndAndExpand"/>
+                    <Button x:Name="AddSourceFolder" Text="Change" HorizontalOptions="EndAndExpand"/>                    
                 </StackLayout>
                 <Label x:Name="PathToDataBase" FontSize="Small"  Margin="10"/>
             </StackLayout>
