--- a/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/AccountDialog.xaml
@@ -5,6 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
         xmlns:local="clr-namespace:Walkabout.Dialogs"
         xmlns:help="clr-namespace:Walkabout.Help"
+        xmlns:c="clr-namespace:Walkabout.Controls"
         help:HelpService.HelpKeyword="Setup Accounts"
         Title="Account" 
         MinHeight="320" MaxHeight="600" MinWidth="400"  
@@ -12,6 +13,21 @@
         WindowStartupLocation="CenterOwner" 
         Background="{DynamicResource DialogWindowBackgroundBrush}"  WindowStyle="ToolWindow" SizeToContent="WidthAndHeight"
         KeyboardNavigation.TabNavigation="Cycle">
+    <local:BaseDialog.Resources>
+        <DataTemplate x:Key="AccountAliasItemTemplate">
+            <Grid HorizontalAlignment="Stretch">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="{Binding Pattern}" Grid.Column="0" HorizontalAlignment="Stretch"/>
+                <c:CloseBox Click="OnAccountAliaseDeleted"  VerticalAlignment="Center" Grid.Column="1"/>
+            </Grid>
+        </DataTemplate>
+        <Style x:Key="ComboBoxStretchStyle" TargetType="ComboBoxItem">
+            <Setter Property="HorizontalAlignment" Value="Stretch"/>
+        </Style>
+    </local:BaseDialog.Resources>
 
     <StackPanel Margin="20,20,20,20">
         <Grid  HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -33,6 +49,8 @@
                 <RowDefinition Height="8"  />
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="Auto"  />
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="8"  />
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="8"  />
                 <RowDefinition Height="*"/>
@@ -103,27 +121,32 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBox x:Name="TextBoxWebSite" Grid.Column="0" Text="{Binding Path=WebSite, Mode=TwoWay}" TabIndex="8"/>
+                <TextBox x:Name="TextBoxWebSite" Grid.Column="0" Text="{Binding Path=WebSite, Mode=TwoWay}" TabIndex="8" />
                 <Button x:Name="ButtonGoToWebSite" Grid.Column="1" Margin="8,0,0,0" Grid.ColumnSpan="2" Click="OnButtonGoToWebSite" TabIndex="9">>></Button>
             </Grid>
 
 
-            <TextBlock Text="Reconcile Warning:" Grid.Column="0" Grid.Row="18" HorizontalAlignment="Right" />
-            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="18" HorizontalAlignment="Stretch">
-                <TextBox x:Name="TextBoxReconcileWarning" Text="{Binding Path=ReconcileWarning, Mode=TwoWay}" Height="22" Width="50" TabIndex="10"
+            <TextBlock Text="Aliases:" Grid.Column="0" Grid.Row="18" HorizontalAlignment="Right" />
+            <ComboBox  Name="comboBoxAccountAliases" HorizontalAlignment="Stretch" Grid.Row="18" Grid.Column="2" Grid.ColumnSpan="2" IsEditable="True" HorizontalContentAlignment="Stretch"
+                           TabIndex="10" ItemTemplate="{StaticResource AccountAliasItemTemplate}" ItemContainerStyle="{StaticResource ComboBoxStretchStyle}"
+                       KeyDown="OnAccountAliasesKeyDown"/>
+
+            <TextBlock Text="Reconcile Warning:" Grid.Column="0" Grid.Row="20" HorizontalAlignment="Right" />
+            <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="20" HorizontalAlignment="Stretch">
+                <TextBox x:Name="TextBoxReconcileWarning" Text="{Binding Path=ReconcileWarning, Mode=TwoWay}" Height="22" Width="50" TabIndex="11"
                          ToolTip="Enter when you would like to see a warning reminding you to balance this account
 (for example, you might want this to be less than the number of statements kept by your bank)"/>
                 <TextBlock Text="months" VerticalAlignment="Center" Margin="10,0,0,0"/>
             </StackPanel>
 
-            <TextBlock Text="Include in budget:" Grid.Column="0" Grid.Row="20" HorizontalAlignment="Right" />
-            <CheckBox x:Name="CheckBoxIncludeInBudget" Grid.Column="2" Grid.Row="20" IsChecked="{Binding Path=IsBudgeted, Mode=TwoWay}" TabIndex="11" />
+            <TextBlock Text="Include in budget:" Grid.Column="0" Grid.Row="22" HorizontalAlignment="Right" />
+            <CheckBox x:Name="CheckBoxIncludeInBudget" Grid.Column="2" Grid.Row="22" IsChecked="{Binding Path=IsBudgeted, Mode=TwoWay}" TabIndex="12" />
 
-            <TextBlock Text="Closed:" Grid.Column="0" Grid.Row="22" HorizontalAlignment="Right" />
-            <CheckBox x:Name="CheckBoxClosed" Grid.Column="2" Grid.Row="22" IsChecked="{Binding Path=IsClosed, Mode=TwoWay}" TabIndex="12" />
+            <TextBlock Text="Closed:" Grid.Column="0" Grid.Row="24" HorizontalAlignment="Right" />
+            <CheckBox x:Name="CheckBoxClosed" Grid.Column="2" Grid.Row="24" IsChecked="{Binding Path=IsClosed, Mode=TwoWay}" TabIndex="13" />
 
-            <TextBlock Text="Last Download:" Grid.Column="0" Grid.Row="24" HorizontalAlignment="Right" />
-            <TextBox x:Name="TextBoxLastDownload" Text="{Binding Path=LastSyncDate, Mode=TwoWay}" Grid.Column="2" Grid.Row="24" Grid.ColumnSpan="2" />
+            <TextBlock Text="Last Download:" Grid.Column="0" Grid.Row="26" HorizontalAlignment="Right" />
+            <TextBox x:Name="TextBoxLastDownload" Text="{Binding Path=LastSyncDate, Mode=TwoWay}" Grid.Column="2" Grid.Row="26" Grid.ColumnSpan="2" />
 
         </Grid>
         
