--- a/Source/WPF/MyMoney/Dialogs/StockQuoteServiceDialog.xaml
+++ b/Source/WPF/MyMoney/Dialogs/StockQuoteServiceDialog.xaml
@@ -40,10 +40,17 @@
             <TextBlock Text="Limit on Requests Per Month:" Grid.Row="8" Grid.Column="0" Margin="5"/>
             <TextBox x:Name="TextBoxRequestsPerMonthLimit" Grid.Row="8" Grid.Column="1" MinWidth="200" Text="{Binding Path=ApiRequestsPerMonthLimit, Mode=TwoWay}"/>
 
-            <StackPanel Orientation="Horizontal" Grid.Row="10" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,20,0,0">
-                <Button x:Name="ButtonOk" MinWidth="73" MinHeight="24" Margin="5" IsDefault="True" Click="OnOk">OK</Button>
-                <Button x:Name="ButtonCancel" MinWidth="73" MinHeight="24" Margin="5" IsCancel="True" Click="OnCancel">Cancel</Button>
-            </StackPanel>
+            <Grid Grid.Row="10" Grid.Column="0" Margin="0,20,0,0" Grid.ColumnSpan="2">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Button x:Name="ButtonBrowse" Grid.Column="0" MinWidth="73" MinHeight="24" Margin="5" IsDefault="True" Click="OnBrowse">Browse</Button>
+                <Button x:Name="ButtonOk" Grid.Column="2" MinWidth="73" MinHeight="24" Margin="5" IsDefault="True" Click="OnOk">OK</Button>
+                <Button x:Name="ButtonCancel" Grid.Column="3" MinWidth="73" MinHeight="24" Margin="5" IsCancel="True" Click="OnCancel">Cancel</Button>
+            </Grid>
         </Grid>
 
     </Grid>
