--- a/Source/WPF/MyMoney/Charts/AnimatingPieChart.xaml
+++ b/Source/WPF/MyMoney/Charts/AnimatingPieChart.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LovettSoftware.Charts.AnimatingBarChart"
+﻿<UserControl x:Class="LovettSoftware.Charts.AnimatingPieChart"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,6 +7,5 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Canvas x:Name="ChartCanvas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-        
     </Canvas>
 </UserControl>
