--- a/Source/WPF/MyMoney/Charts/CategoryChart.xaml
+++ b/Source/WPF/MyMoney/Charts/CategoryChart.xaml
@@ -3,30 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:charting="clr-namespace:System.Windows.Controls.DataVisualization.Charting"
+             xmlns:c="clr-namespace:LovettSoftware.Charts"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <UserControl.Resources>
-        <!-- PieChart -->
-        <Style TargetType="{x:Type charting:Chart}">
-            <Setter Property="Padding" Value="10,0,0,0"/>
-            <Setter Property="BorderBrush" Value="{x:Null}"/>
-            <Setter Property="Foreground" Value="Black"/>
-        </Style>
-
-
-    </UserControl.Resources>
     <Grid>
-        <charting:Chart   x:Name="PieChart" 
-                          LegendTitle="Categories" >
-            <charting:Chart.Series>
-                <charting:PieSeries  x:Name="PieSeries" 
-                                     IndependentValueBinding="{Binding Path=Name}"
-                                     DependentValueBinding="{Binding Path=Total}" 
-                                     IsSelectionEnabled="True">
-                </charting:PieSeries>
-            </charting:Chart.Series>
-        </charting:Chart>
+        <c:AnimatingPieChart x:Name="PieChart" Padding="10"/>
+        
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">            
             <TextBlock Text="Total: " FontWeight="Bold"/>
             <TextBlock Text="" x:Name="TotalAmount" />
