--- a/Source/WPF/MyMoney/Charts/LoanChart.xaml
+++ b/Source/WPF/MyMoney/Charts/LoanChart.xaml
@@ -21,6 +21,10 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
             <TextBlock Grid.Column="0" Grid.Row="0" Text="Principal: " FontWeight="Bold"/>
             <TextBlock Grid.Column="1" Grid.Row="0" Text="" x:Name="TextBoxPrincipal" />
             <TextBlock Grid.Column="0" Grid.Row="1" Text="Interest: " FontWeight="Bold"/>
