--- a/Source/WPF/MyMoney/Charts/CategoryChart.xaml
+++ b/Source/WPF/MyMoney/Charts/CategoryChart.xaml
@@ -6,7 +6,13 @@
              xmlns:c="clr-namespace:LovettSoftware.Charts"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
+
+    <UserControl.ContextMenu>
+        <ContextMenu>
+            <MenuItem Header="Export..." Click="OnExport"/>
+        </ContextMenu>
+    </UserControl.ContextMenu>
+    <Grid Background="Transparent">
         <c:AnimatingPieChart x:Name="PieChart" Padding="10"/>
         
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">            
